--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,15 +5,15 @@ configure_lit_site_cfg(
         ${CMAKE_CURRENT_SOURCE_DIR}/lit.cfg.py
 )
 
-set(STANDALONE_OPT_TEST_DEPENDS
+set(GEMMINI_OPT_TEST_DEPENDS
         FileCheck count not
-        standalone-opt
+        gemmini-opt
         )
 
-add_lit_testsuite(check-standalone-opt "Running the standalone-opt regression tests"
+add_lit_testsuite(check-gemmini-opt "Running the gemmini-opt regression tests"
         ${CMAKE_CURRENT_BINARY_DIR}
-        DEPENDS ${STANDALONE_OPT_TEST_DEPENDS}
+        DEPENDS ${GEMMINI_OPT_TEST_DEPENDS}
         )
-set_target_properties(check-standalone-opt PROPERTIES FOLDER "Tests")
+set_target_properties(check-gemmini-opt PROPERTIES FOLDER "Tests")
 
-add_lit_testsuites(STANDALONE_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${STANDALONE_OPT_TEST_DEPENDS})
+add_lit_testsuites(GEMMINI_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${GEMMINI_OPT_TEST_DEPENDS})
