--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get Template Code
         uses: actions/checkout@v2
         with:
-          path: 'mlir-standalone-template'
+          path: 'mlir-gemmini'
       - name: Cache LLVM
         id: cache-llvm
         uses: actions/cache@v2
@@ -55,14 +55,14 @@ jobs:
           cmake --build . --target install -- -j$(nproc)
       - name: Sanitizer build
         run: |
-          mkdir $GITHUB_WORKSPACE/mlir-standalone-template/sanitizer-build
-          cd $GITHUB_WORKSPACE/mlir-standalone-template/sanitizer-build
-          cmake $GITHUB_WORKSPACE/mlir-standalone-template -DCMAKE_BUILD_TYPE=Debug -DUSE_SANITIZER='Address;Undefined' ${{ env.CMAKE_FLAGS }}
-          cmake --build . --target check-standalone-opt -- -j$(nproc)
+          mkdir $GITHUB_WORKSPACE/mlir-gemmini/sanitizer-build
+          cd $GITHUB_WORKSPACE/mlir-gemmini/sanitizer-build
+          cmake $GITHUB_WORKSPACE/mlir-gemmini -DCMAKE_BUILD_TYPE=Debug -DUSE_SANITIZER='Address;Undefined' ${{ env.CMAKE_FLAGS }}
+          cmake --build . --target check-gemmini-opt -- -j$(nproc)
       - name: Release build
         run: |
-          mkdir $GITHUB_WORKSPACE/mlir-standalone-template/build
-          cd $GITHUB_WORKSPACE/mlir-standalone-template/build
-          cmake $GITHUB_WORKSPACE/mlir-standalone-template -DCMAKE_BUILD_TYPE=Release ${{ env.CMAKE_FLAGS }}
-          cmake --build . --target check-standalone-opt -- -j$(nproc)
+          mkdir $GITHUB_WORKSPACE/mlir-gemmini/build
+          cd $GITHUB_WORKSPACE/mlir-gemmini/build
+          cmake $GITHUB_WORKSPACE/mlir-gemmini -DCMAKE_BUILD_TYPE=Release ${{ env.CMAKE_FLAGS }}
+          cmake --build . --target check-gemmini-opt -- -j$(nproc)
 
