--- a/include/gemmini/Dialect/CMakeLists.txt
+++ b/include/gemmini/Dialect/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_mlir_dialect(GemminiOps gemmini)
+add_mlir_dialect(Gemmini gemmini)
+
+
 add_mlir_doc(GemminiDialect GemminiDialect Gemmini/ -gen-dialect-doc)
 add_mlir_doc(GemminiOps GemminiOps Gemmini/ -gen-op-doc)
