Move conversion targets out of Gemmini folder

--- a/lib/Conversion/LinalgToGemmini/CMakeLists.txt
+++ b/lib/Conversion/LinalgToGemmini/CMakeLists.txt
@@ -2,7 +2,7 @@ add_mlir_conversion_library(LinalgToGemmini
   LinalgToGemmini.cpp
 
   ADDITIONAL_HEADER_DIRS
-  ${PROJ_INCLUDE_DIR}/gemmini/Conversion
+  ${PROJ_INCLUDE_DIR}/Conversion
 
   DEPENDS
   GemminiConversionPassIncGen
