--- a/lib/Conversion/GemminiToLLVM/CMakeLists.txt
+++ b/lib/Conversion/GemminiToLLVM/CMakeLists.txt
@@ -2,7 +2,7 @@ add_mlir_conversion_library(LinalgToGemmini
   GemminiToLLVM.cpp
 
   ADDITIONAL_HEADER_DIRS
-  ${PROJ_INCLUDE_DIR}/gemmini/Conversion/
+  ${PROJ_INCLUDE_DIR}/Conversion/
 
   DEPENDS
   GemminiConversionPassIncGen
