--- a/lib/Conversion/GemminiToLLVM/CMakeLists.txt
+++ b/lib/Conversion/GemminiToLLVM/CMakeLists.txt
@@ -11,6 +11,7 @@ add_mlir_conversion_library(LinalgToGemmini
   MLIRAffineDialect
   MLIRAffineToStandard
   MLIRIR
+  MLIRLLVMDialect
   MLIRLinalgDialect
   MLIRMemRefDialect
   MLIRPass
